bk_ida/gccida/g2/do_case
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7660:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7661:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7663:19: error: expected expression
v2 = ( tree_node *)switch_stack; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7663:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)switch_stack; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7667:19: error: expected expression
if ( ( tree_node *)global_trees == v3 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/c-typeck.c:7667:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)global_trees == v3 ) 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_case/src/obj/c-typeck.o] Error 1
